--- a/001-covid19.ipynb
+++ b/001-covid19.ipynb
@@ -52,7 +52,7 @@
     "recovered_daily = recovered.drop(['Lat','Long'],1).transpose().reset_index()\n",
     "recovered_daily = pd.DataFrame(recovered_daily.values[1:], columns=recovered_daily.iloc[0,:])\n",
     "recovered_daily['Global'] = recovered_daily.iloc[:,1:].sum(axis=1)\n",
-    "recovered_daily = recovered_daily.rename(columns={'Country/Region':'Date'})\n"
+    "recovered_daily = recovered_daily.rename(columns={'Country/Region':'Date'})"
    ]
   },
   {
